--- a/Home.html
+++ b/Home.html
@@ -30,7 +30,39 @@
       <p class="lead">
         Transform Your Body, Transform Your Life.
       </p>
-      <video src="Videos_Images/The Most Motivating 6 Minutes of Your Life _ David Goggins.mp4" class="object-fit-contain" autoplay width="700px"></video>
+    </div>
+    <div id="h1-txt">
+    <h1>What do you want to workout!</h1>
+    </div>
+    <div id="card-container">
+      
+      <div class="card" style="width: 18rem;">
+        <img src="Videos_Images/mucle.png" class="card-img-top" alt="Muscle">
+        <div class="card-body">
+          <h5 class="card-title">Build Muscle</h5>
+          <p class="card-text">Exersices about building muscle.</p>
+          <a href="#" class="btn-primary">Open</a>
+        </div>
+
+        <div class="card2" style="width: 18rem;">
+          <img src="Videos_Images/body.png" class="card2-img-top" alt="Body-Fat" width="250px" height="250px">
+          <div class="card2-body">
+            <h5 class="card2-title">Lose Body-Fat</h5>
+            <p class="card2-text">Exersices about losing body fat.</p>
+            <a href="#" class="btn-primary">Open</a>
+          </div>
+        </div>
+
+        <div class="card3" style="width: 18rem;">
+          <img src="Videos_Images/diet.png" class="card3-img-top" alt="Diet" width="250px" height="250px">
+          <div class="card3-body">
+            <h5 class="card3-title">Diets</h5>
+            <p class="card3-text">Meal plans and kinds of diets.</p>           
+            <a href="#" class="btn-primary">Open</a>
+          </div>
+        </div>
+
+      </div>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <script src="JS/home.js"></script>
