--- a/Home.html
+++ b/Home.html
@@ -1,70 +1,100 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <link rel="stylesheet" href="CSS/hOme.css">
-    <title>Document</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Athenian Fit</title>
+  <link rel="stylesheet" href="CSS/hOme.css" />
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg bg-body-tertiary">
-        <div class="container-fluid">
-          <a class="navbar-brand" href="#">Athenian Fit</a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav">
-              <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#Home">Home</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#About US">About Us</a>
-              </li>
-            </ul>
-          </div>
-        </div>
-    </nav>
-    <div id="lead-div">
-      <p class="lead">
-        Transform Your Body, Transform Your Life.
-      </p>
+
+  <!-- Navigation Bar -->
+  <nav class="navbar">
+    <div class="logo">Athenian Fit</div>
+    <ul class="nav-links">
+      <li><a href="#home">Home</a></li>
+      <li><a href="#exercises">Exercises</a></li>
+      <li><a href="#mealplans">Meal Plans</a></li>
+      <li><a href="#contact">Contact</a></li>
+    </ul>
+  </nav>
+
+  <!-- Hero Section -->
+  <section class="hero" id="home">
+    <div class="hero-content">
+      <h1>Unleash Your Potential with Athenian Fit</h1>
+      <p>Personalized fitness plans with exercises and meal guides to help you become your best self!</p>
+      <a href="#exercises" class="cta-btn">Start Now</a>
     </div>
-    <div id="h1-txt">
-    <h1>What do you want to workout!</h1>
-    </div>
-    <div id="card-container">
-      
-      <div class="card" style="width: 18rem;">
-        <img src="Videos_Images/mucle.png" class="card-img-top" alt="Muscle">
-        <div class="card-body">
-          <h5 class="card-title">Build Muscle</h5>
-          <p class="card-text">Exersices about building muscle.</p>
-          <a href="#" class="btn-primary">Open</a>
-        </div>
+  </section>
 
-        <div class="card2" style="width: 18rem;">
-          <img src="Videos_Images/body.png" class="card2-img-top" alt="Body-Fat" width="250px" height="250px">
-          <div class="card2-body">
-            <h5 class="card2-title">Lose Body-Fat</h5>
-            <p class="card2-text">Exersices about losing body fat.</p>
-            <a href="#" class="btn-primary">Open</a>
-          </div>
-        </div>
-
-        <div class="card3" style="width: 18rem;">
-          <img src="Videos_Images/diet.png" class="card3-img-top" alt="Diet" width="250px" height="250px">
-          <div class="card3-body">
-            <h5 class="card3-title">Diets</h5>
-            <p class="card3-text">Meal plans and kinds of diets.</p>           
-            <a href="#" class="btn-primary">Open</a>
-          </div>
-        </div>
-
+  <!-- Exercises Section -->
+  <section class="exercises" id="exercises">
+    <h2>Get Stronger with These Exercises</h2>
+    <div class="exercise-cards">
+      <div class="card">
+        <img src="Videos_Images/Pushups.png" alt="Push-ups" />
+        <h3>Push-ups</h3>
+        <p>Target your chest, triceps, and shoulders with this effective bodyweight exercise.</p>
+      </div>
+      <div class="card">
+        <img src="Videos_Images/squat.png" alt="Squats" height="180px"/>
+        <h3>Squats</h3>
+        <p>Strengthen your lower body and build a solid foundation with this full-body movement.</p>
+      </div>
+      <div class="card">
+        <img src="Videos_Images/plank.png" alt="Planks" />
+        <h3>Plank</h3>
+        <p>Work your core, shoulders, and arms for better stability and strength.</p>
       </div>
     </div>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-    <script src="JS/home.js"></script>
+  </section>
+
+  <!-- Meal Plans Section -->
+  <section class="meal-plans" id="mealplans">
+    <h2>Delicious Meal Plans for Your Fitness Goals</h2>
+    <div class="meal-cards">
+      <div class="meal-card">
+        <img src="Videos_Images/Oatmeal-with-berries.png" alt="Oatmeal & Berries" />
+        <h3>Oatmeal & Berries</h3>
+        <p>A nutritious breakfast that’s high in fiber, antioxidants, and vitamins to kickstart your day.</p>
+      </div>
+      <div class="meal-card">
+        <img src="Videos_Images/Grilled-Chicken-Salad.png" alt="Grilled Chicken Salad" height="200px"/>
+        <h3>Grilled Chicken Salad</h3>
+        <p>Lean protein and fresh vegetables to fuel your afternoon with energy and strength.</p>
+      </div>
+      <div class="meal-card">
+        <img src="Videos_Images/salmonAndVeggies.png" alt="Salmon & Veggies" height="200px"/>
+        <h3>Salmon & Veggies</h3>
+        <p>Omega-3 rich salmon paired with roasted vegetables for a well-rounded, nutritious dinner.</p>
+      </div>
+    </div>
+  </section>
+
+  <!-- Call to Action -->
+  <section class="cta" id="contact">
+    <div class="cta-content">
+      <h2>Get Your Personalized Plan Today!</h2>
+      <p>Sign up now and receive a customized workout routine and meal plan tailored to your goals!</p>
+      <a href="/signup" class="cta-btn">Sign Up Now</a>
+    </div>
+  </section>
+
+  <!-- Footer -->
+  <footer class="footer">
+    <div class="footer-content">
+      <div class="footer-left">
+        <h3>Athenian Fit</h3>
+        <p>Email: contact@athenianfit.com</p>
+        <p>Phone: (987) 654-3210</p>
+      </div>
+      <div class="footer-right">
+        <p>&copy; 2025 Athenian Fit. All rights reserved.</p>
+      </div>
+    </div>
+  </footer>
+
+  <script src="JS/home.js"></script>
 </body>
 </html>
