--- a/sign_up/sign_uphtml.html
+++ b/sign_up/sign_uphtml.html
@@ -24,7 +24,7 @@
             <li><a href="#">Home</a></li>
             <li><a href="#">About Us</a></li>
             <li><a href="#">Personal Information</a></li>
-            <li><a href="#">Tracking System</a></li>
+            <li><a href="#">Exercises</a></li>
             <ul class="nav-links">
                 <li><a href="login.html"><i class="fa-solid fa-user"></i></a></li>
             </ul>
@@ -42,7 +42,7 @@
             <label for="password">Password:</label>
             <input type="password" id="password" required>
     
-            <button type="submit">Sign up</button>
+            <button type="submit" href="#home">Sign up</button>
         </form>
 
     </div>
