--- a/Home.html
+++ b/Home.html
@@ -24,10 +24,9 @@
   </button>
 
   <ul class="nav-links">
-      <li><a href="#">Home</a></li>
-      <li><a href="#">About Us</a></li>
-      <li><a href="#">Personal Information</a></li>
-      <li><a href="#">Exercises</a></li>
+      <li><a href="Home.html">Home</a></li>
+      <li><a href="InformationForm.html">Personal Information</a></li>
+      <li><a href="exercise.html">Exercises</a></li>
       <ul class="nav-links">
           <li><a href="login.html"><i class="fa-solid fa-user"></i></a></li>
       </ul>
@@ -50,7 +49,7 @@
     <div class="cta-content">
       <h2>Get Your Personalized Plan Today!</h2>
       <p>Sign up now and receive a customized workout routine and meal plan tailored to your goals!</p>
-      <a href="/signup" class="cta-btn">Sign Up Now</a>
+      <a href="/sign_up/sign_uphtml.html" class="cta-btn">Sign Up Now</a>
     </div>
   </section>
   <div class="h2_problem">
@@ -83,15 +82,14 @@
             <h3>Quick Links</h3>
             <ul>
                 <li><a href="Home.html">Home</a></li>
-                <li><a href="#">About Us</a></li>
-                <li><a href="#">Personal Information</a></li>
-                <li><a href="#">Exercises</a></li>
+                <li><a href="InformationForm.html">Personal Information</a></li>
+                <li><a href="exercise.html">Exercises</a></li>
             </ul>
         </div>
 
         <div class="footer-section links">
             <h3>About AthenianFit</h3>
-            <p>Your one-stop destination for unforgettable travel experiences and adventures across Kosovo.</p>
+            <p>Your ultimate online destination for empowering fitness journeys and transformative workouts—anytime, anywhere.</p>
         </div>
         <div class="footer-section social">
             <h3>Follow Us</h3>
