--- a/sign_up/sign_uphtml.html
+++ b/sign_up/sign_uphtml.html
@@ -21,10 +21,9 @@
         </button>
 
         <ul class="nav-links">
-            <li><a href="#">Home</a></li>
-            <li><a href="#">About Us</a></li>
-            <li><a href="#">Personal Information</a></li>
-            <li><a href="#">Exercises</a></li>
+            <li><a href="../Home.html">Home</a></li>
+            <li><a href="../InformationForm.html">Personal Information</a></li>
+            <li><a href="../exercise.html">Exercises</a></li>
             <ul class="nav-links">
                 <li><a href="login.html"><i class="fa-solid fa-user"></i></a></li>
             </ul>
@@ -42,7 +41,7 @@
             <label for="password">Password:</label>
             <input type="password" id="password" required>
     
-            <button type="submit" href="#home">Sign up</button>
+         <button type="submit" ><a href="../Home.html">Sign up</a></button>
         </form>
 
     </div>
@@ -70,7 +69,7 @@
 
         <div class="footer-section links">
             <h3>About AthenianFit</h3>
-            <p>Your one-stop destination for unforgettable travel experiences and adventures across Kosovo.</p>
+            <p>Your ultimate online destination for empowering fitness journeys and transformative workouts—anytime, anywhere.</p>
         </div>
         <div class="footer-section social">
             <h3>Follow Us</h3>
