--- a/InformationForm.html
+++ b/InformationForm.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <nav>
-        <a href="#" class="logo-container">
+        <a href="Home.html" class="logo-container">
             <div class="logo-symbol"></div>
             <div class="logo-text">ATHENIAN<span>FIT</span></div>
         </a>
