--- a/Home.html
+++ b/Home.html
@@ -12,7 +12,7 @@
 
  <!-- Navigation Bar -->
  <nav>
-  <a href="#" class="logo-container">
+  <a href="Home.html" class="logo-container">
       <div class="logo-symbol"></div>
       <div class="logo-text">ATHENIAN<span>FIT</span></div>
   </a>
@@ -49,7 +49,7 @@
     <div class="cta-content">
       <h2>Get Your Personalized Plan Today!</h2>
       <p>Sign up now and receive a customized workout routine and meal plan tailored to your goals!</p>
-      <a href="/sign_up/sign_uphtml.html" class="cta-btn">Sign Up Now</a>
+      <a href="sign_up/sign_uphtml.html" class="cta-btn">Sign Up Now</a>
     </div>
   </section>
   <div class="h2_problem">
