--- a/Home.html
+++ b/Home.html
@@ -43,6 +43,19 @@
     </div>
   </section>
 
+  <div id="slideWrapper">
+    <div class="slide">
+        <img src="Videos_Images/motivational.jpg" alt="" width="90%" height="500px">
+    </div>
+    <div class="slide">
+        <img src="Videos_Images/workharder.jpg" alt="" width="90%" height="500px">
+    </div>
+    <div class="slide">
+        <img src="Videos_Images/running.jpg" alt="" width="90%" height="500px">
+    </div>
+</div>
+<a id="prev"><img src="Videos_Images/backward.png" alt="backward" width="50px" height="50px" onclick="plusSlides(-1)"></a>
+<a  id="next"><img src="Videos_Images/forward.png" alt="forward" width="50px" height="50px" onclick="plusSlides(1)"></a>
 
   <!-- Call to Action -->
   <section class="cta" id="contact">
